[gd_scene load_steps=9 format=3 uid="uid://upsyfweitccj"]

[ext_resource type="Script" uid="uid://dtpm6m4xb2sq8" path="res://scripts/LoadingButton.gd" id="1_08v4e"]
[ext_resource type="Theme" uid="uid://delj3mi1iaei4" path="res://scenes/gui/theme.tres" id="1_trqu1"]
[ext_resource type="Texture2D" uid="uid://bi8dkdmdhs00q" path="res://scenes/gui/bg_blur.png" id="2_ib15e"]
[ext_resource type="VideoStream" uid="uid://c4dxgmw6nolmb" path="res://scenes/Untitled2.ogv" id="5_e8bdm"]
[ext_resource type="Script" uid="uid://cse42tsu3fsoo" path="res://scripts/loadinganim.gd" id="5_lb2cr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u5rxc"]
texture = ExtResource("2_ib15e")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_blx3f"]
bg_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n142u"]
bg_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_trqu1")

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778
stretch_mode = 3

[node name="Panel" type="Panel" parent="AspectRatioContainer2"]
modulate = Color(0.386719, 0.386719, 0.386719, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_u5rxc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -68.0
offset_right = 48.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.882353, 1, 0.584314, 1)
text = "Jungle demo v2"
horizontal_alignment = 1

[node name="loadbtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start "
script = ExtResource("1_08v4e")

[node name="creditsbtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "About"

[node name="quitbtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Credits" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(800, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_blx3f")

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Credits/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
text = "[color=#0099ff] [center]Thank You For Playing ❤️[/center] [/color]

[center]Jungle Demo 2.0 is a graphics demo based on Godot 4.4, made by WrobotGames.
Godot Game Engine is an awesome free and open source game engine, and this demo wants to show a part of what its capable of. 
[/center]
[center]Download the Godot Game Engine on Godotengine.org[/center]

[color=orange] [center]Used assets & Licenses[/center] [/color]
[color=green] [center]Godot Engine[/center] [/color]
  Copyright (c) 2014-present Godot Engine contributors.
  Copyright (c) 2007-2014 Juan Linietsky, Ariel Manzur.

  Permission is hereby granted, free of charge, to any person obtaining a copy
  of this software and associated documentation files (the \"Software\"), to deal
  in the Software without restriction, including without limitation the rights
  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  copies of the Software, and to permit persons to whom the Software is
  furnished to do so, subject to the following conditions:

  The above copyright notice and this permission notice shall be included in all
  copies or substantial portions of the Software.

  THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  SOFTWARE.

  -- Godot Engine <https://godotengine.org>
[color=green] [center]Godot Engine Logo[/center] [/color]
Godot Engine Logo Copyright (c) 2017 Andrea Calabró
This work is licensed under a Creative Commons Attribution 4.0 International License (CC-BY-4.0 International) https://creativecommons.org/licenses/by/4.0/.

[color=green] [center]Proton Scatter[/center] [/color]
Copyright (c) 2020-present HungryProton.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

[color=green] [center]Monitor Overlay[/center] [/color]
MIT License

Copyright (c) 2020 HungryProton

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

[color=green] [center]Terrain3D[/center] [/color]
MIT License

Copyright (c) 2023 Roope Palmroos, Cory Petkovsek, and Contributors. All Rights Reserved.
See CONTRIBUTORS.md

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
[color=green] [center]DM Sans font[/center] [/color]
Open Font License
https://fonts.google.com/specimen/DM+Sans/about
[color=green] [center]Jungle Assets Pack[/center] [/color]
https://unrealengine.com/marketplace/en-US/product/tropical-jungle-pack 
Ported to Godot
[color=green] [center]Assets[/center] [/color]
❤ CC0 Textures, Music and Sounds from:
https://ambientcg.com/
https://polyhaven.com/
https://opengameart.org/"
context_menu_enabled = true
selection_enabled = true

[node name="Button" type="Button" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="Precredits" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.65
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_blx3f")

[node name="VBoxContainer" type="VBoxContainer" parent="Precredits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Precredits/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Precredits/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
bbcode_enabled = true
text = "[color=#0099ff] [center]Thank You For Downloading ❤️[/center] [/color]

[center]Jungle Demo is a graphics showcase based on the Godot Game Engine version 4.4.[/center]

[center]The scene loads the [color=yellow]High[/color] preset by default. Change the settings if needed. [/center]

[center]Made by WrobotGames 
Twitter: @Wrobot123
Github: WrobotGames[/center]
[color=green] [center]Enjoy the demo![/center] [/color]"

[node name="Button" type="Button" parent="Precredits/VBoxContainer"]
layout_mode = 2
text = "Okay!"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778
stretch_mode = 1

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="AspectRatioContainer"]
layout_mode = 2
stream = ExtResource("5_e8bdm")
autoplay = true
expand = true

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_font_sizes/font_size = 12
text = "V2.0 Github Stripped - Wrobot.itch.io "

[node name="loadingscreen" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n142u")

[node name="HBoxContainer" type="HBoxContainer" parent="loadingscreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 72.0
grow_vertical = 0

[node name="Label2" type="Label" parent="loadingscreen/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_font_sizes/font_size = 15
text = " "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="loadingscreen/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.261719, 0.247406, 0.247406, 1)
script = ExtResource("5_lb2cr")

[node name="Label" type="Label" parent="loadingscreen/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_font_sizes/font_size = 15
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/loadbtn" to="VBoxContainer/loadbtn" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/creditsbtn" to="VBoxContainer/loadbtn" method="_on_creditsbtn_pressed"]
[connection signal="pressed" from="VBoxContainer/quitbtn" to="VBoxContainer/loadbtn" method="_on_quitbtn_pressed"]
[connection signal="pressed" from="Credits/VBoxContainer/Button" to="VBoxContainer/loadbtn" method="_on_credits_close_requested"]
[connection signal="pressed" from="Precredits/VBoxContainer/Button" to="VBoxContainer/loadbtn" method="_on_button_pressed"]
